# django_graph_search

./: .gitignore  .pylintrc  MANIFEST.in  README.md  setup.cfg
.github/workflows/: publish.yml  workflows.yaml
src/django_graph_search/: __init__.py  admin.py  apps.py  cache.py  components.py  exceptions.py  factory.py  graph_resolver.py  indexer.py  searcher.py  settings.py  signals.py  urls.py  utils.py  views.py
src/django_graph_search/backends/: __init__.py  base.py  chromadb.py  faiss.py  qdrant.py
src/django_graph_search/embeddings/: __init__.py  base.py  sentence_transformers.py
src/django_graph_search/management/commands/: build_search_index.py  clear_search_index.py  search_index_status.py
src/django_graph_search/static/django_graph_search/css/: search.css
src/django_graph_search/static/django_graph_search/js/: search.js
src/django_graph_search/templates/django_graph_search/admin/: search.html
tests/: conftest.py  dummy_embedding_backend.py  test_api.py  test_backends.py  test_embedding_selection.py  test_indexer.py  test_resolver.py  utils.py
tests/test_app/: apps.py  models.py
