[metadata]
name = django-graph-search
version = 0.1.0
description = Vector search for Django models with graph relations
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
author = Your Name
url = https://example.com/django-graph-search
classifiers =
    Framework :: Django
    Framework :: Django :: 4
    Framework :: Django :: 4.2
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    django>=4.2
    sentence-transformers>=2.2.2

[options.packages.find]
where = src

[options.extras_require]
chromadb =
    chromadb>=0.5.0
faiss =
    faiss-cpu>=1.7.4
qdrant =
    qdrant-client>=1.6.0
test =
    pytest>=9.0.0
all =
    chromadb>=0.5.0
    faiss-cpu>=1.7.4
    qdrant-client>=1.6.0

